--- a/about-us.html
+++ b/about-us.html
@@ -19,8 +19,8 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top pl-5 pr-5">
-            <a class="navbar-brand" href="#"><img src="assets/logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <a href="index.html" class="navbar-brand"><img src="assets/logo.png"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #3a83b5;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -28,29 +28,41 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Shares & Stocks</a>
+                            <a class="dropdown-item" href="#">Mutual Funds</a>
+                            <a class="dropdown-item" href="#">Insurance</a>
+                            <a class="dropdown-item" href="#">Loans</a>
+                            <a class="dropdown-item" href="#">Income Tax</a>
+                            <a class="dropdown-item" href="#">Real Estate</a>
+                            <a class="dropdown-item" href="#">Other Services</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" id="dropdown01" aria-haspopup="true" aria-expanded="false" href="partner.html">Become a Partner</a>
+                        <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="#">FAQs</a>
+                            <a class="dropdown-item" href="#">Blogs</a>
+                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                        </div>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="theme-btn btn my-2 my-sm-0" type="submit">Contact Us</button>
+                    <a class="theme-btn btn my-2 my-sm-0" href="contact-us.html">Contact Us</a>
                 </form>
             </div>
         </nav>
-        <div class="hero sub-hero text-center">
+        <div class="hero sub-hero text-center partner-hero">
             <div class="container">
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-12 col-xl-12">
                         <div>
-                            <h1 class="theme-h1 text-center theme-color">
+                            <h1 class="theme-h1 text-center">
 About Finorator</h1>
                         </div>
                     </div>
@@ -108,6 +120,92 @@ About Finorator</h1>
                         <img src="assets/team-dummy.png">
                         <h3>Andrew Chen</h3>
                         <p>Financial Expert</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-body features">
+            <div class="container">
+                <div class="theme-head text-center">Why choose Finorator</div>
+                <div class="row mb-5">
+                    <div class="col-xl-4 col-lg-4 col-sm-6">
+                        <div class="feature-bigcard">
+                            <img src="assets/main-feature1.svg">
+                            <div class="description">To be a Financially Literate person and increase your knowledge bank gaining financial wisdom</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-6">
+                        <div class="feature-bigcard">
+                            <img src="assets/main-feature2.svg">
+                            <div class="description">To spend less time and money on otherwise financial applications of different financial sectors</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-12">
+                        <div class="feature-bigcard">
+                            <img src="assets/main-feature3.svg">
+                            <div class="description">To get simplified Financial Advisory and Customer Support escaping complex decisions and digital frauds</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5 pt-5">
+                    <div class="col-xl-3 col-lg-3 col-sm-6">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">Zero-cost Doorstep Consultancy</div>
+                            <div class="description">Get a no-cost financial advisory and customer support at your doorstep with no hidden or surplus charges on products & services
+</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-sm-6">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature2.svg">
+                            <div class="title">Absolute 
+                                <br>Transparency
+                            </div>
+                            <div class="description">Get insights on pricing, a detailed comparison of different segments, and increase your financial awareness by filtering products as per your need.
+</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-sm-6">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature3.svg">
+                            <div class="title">Effortless
+                                <br> Universal KYC
+                            </div>
+                            <div class="description">Tired of registering everywhere for KYC? With Finorator, you need to register digitally only once for all your financial uses and applications.
+</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-sm-6">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature4.svg">
+                            <div class="title">Integrated Financial solutions and uses</div>
+                            <div class="description">No need to jump between different applications for different purposes. Using Finorator, you can integrate data of investments, banking, loans, mutual funds, tax filing and more for all financial operations inside one single application.</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-6"> 
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/feature-5.svg">
+                            <div class="title">Pay Once for One Segment</div>
+                            <div class="description">You don’t need to pay multiple times to avail different services under each segment and sub-segments. With Finorator, you only pay once to gain access to a range of products & services under each segment or sub-segment.</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-6">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/feature-6.svg">
+                            <div class="title">Complete Privacy</div>
+                            <div class="description">Worried about your personal and transactional details? You don’t need
+                                to! Finorator provides absolute privacy with user-friendly cloud storage support for all your important document uploads.
+</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-12">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/feature-7.svg">
+                            <div class="title">Refer products and Win Cash Rewards</div>
+                            <div class="description">Avail cash rewards and cashback for each product referral you make to your friends, family, and colleagues.
+</div>
+                        </div>
                     </div>
                 </div>
             </div>
