--- a/contact-us.html
+++ b/contact-us.html
@@ -19,8 +19,8 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top pl-5 pr-5">
-            <a class="navbar-brand" href="#"><img src="assets/logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <a href="index.html" class="navbar-brand"><img src="assets/logo.png"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #3a83b5;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -28,9 +28,13 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Shares & Stocks</a>
+                            <a class="dropdown-item" href="#">Mutual Funds</a>
+                            <a class="dropdown-item" href="#">Insurance</a>
+                            <a class="dropdown-item" href="#">Loans</a>
+                            <a class="dropdown-item" href="#">Income Tax</a>
+                            <a class="dropdown-item" href="#">Real Estate</a>
+                            <a class="dropdown-item" href="#">Other Services</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -39,18 +43,63 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="#">FAQs</a>
+                            <a class="dropdown-item" href="#">Blogs</a>
+                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                        </div>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="theme-btn btn my-2 my-sm-0" type="submit">Contact Us</button>
+                    <a class="theme-btn btn my-2 my-sm-0" href="contact-us.html">Contact Us</a>
                 </form>
             </div>
         </nav>
-        <div class="hero sub-hero text-center">
+        <div class="hero sub-hero text-center partner-hero">
             <div class="container">
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-12 col-xl-12">
                         <div>
-                            <h1 class="theme-h1 text-center theme-color">Contact Us</h1>
+                            <h1 class="theme-h1 text-center">Contact Us</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-body partner-form-section">
+            <div class="container">
+                <div class="theme-head mt-4">Have query ? Connect with us.</div>
+                <div class="row" style="align-items: center;">
+                    <div class="col-lg-6">
+                        <form class="partner-form" style="text-align: center;">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Email</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your email"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Mobile no.</label>
+                                <input type="text" class="form-control" id="" placeholder="Enter your Mobile no."/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Address</label>
+                                <input type="text" class="form-control" id="" placeholder="Enter full address with pin code"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Message</label>
+                                <textarea type="text" class="form-control" id="" placeholder="Enter your message here"></textarea>
+                            </div>
+                            <button class="theme-btn btn my-2 my-sm-0 theme-bg2" type="submit">Submit</button>
+                        </form>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3718.4195835162845!2d81.64447971492264!3d21.254852685876365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a28dd92aa38537f%3A0x7d5d65dfd8e8d55d!2s36INC!5e0!3m2!1sen!2sin!4v1632938713000!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
