--- a/partner.html
+++ b/partner.html
@@ -19,8 +19,8 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top pl-5 pr-5">
-            <a class="navbar-brand" href="#"><img src="assets/logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <a href="index.html" class="navbar-brand"><img src="assets/logo.png"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #3a83b5;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -28,24 +28,36 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Shares & Stocks</a>
+                            <a class="dropdown-item" href="#">Mutual Funds</a>
+                            <a class="dropdown-item" href="#">Insurance</a>
+                            <a class="dropdown-item" href="#">Loans</a>
+                            <a class="dropdown-item" href="#">Income Tax</a>
+                            <a class="dropdown-item" href="#">Real Estate</a>
+                            <a class="dropdown-item" href="#">Other Services</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="#">FAQs</a>
+                            <a class="dropdown-item" href="#">Blogs</a>
+                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                        </div>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="theme-btn btn my-2 my-sm-0" type="submit">Contact Us</button>
+                    <a class="theme-btn btn my-2 my-sm-0" href="contact-us.html">Contact Us</a>
                 </form>
             </div>
         </nav>
-        <div class="hero">
+        <div class="hero partner-hero" style="background-image: url('assets/bg_1.png');">
             <div class="container">
                 <div class="row" style="align-items: center;">
                     <div class="col-xl-6 col-lg-5">
@@ -54,7 +66,7 @@
                     <div class="col-xl-6 col-lg-7">
                         <div>
                             <h1 class="theme-h1">Financial Products
-Ka <span class="theme-color">SuperMarket</span></h1>
+Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-type='[ "Supermarket.", "Bazaar." ]'></a></span></h1>
                             <p class="theme-p mb-4">Grow your expertise and increase your business revenue to become a technology-driven financial manager — Finotarian!</p>
                             <button class="theme-btn btn my-2 my-sm-0 theme-bg2">Learn More</button>
                         </div>
@@ -65,8 +77,9 @@ Ka <span class="theme-color">SuperMarket</span></h1>
         <div class="section-body">
             <div class="container">
                 <div class="theme-head">Become a Partner</div>
-                <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, as well as other investments and using products of every segment to manage the financial operations of your business.<br><br>
-You’re just one step away from your <b>Dream Career</b></p>
+                <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, as well as other investments and using products of every segment to manage the financial operations of your business.<br><br><div class="text-center theme-color">You’re just one step away from your 
+                        <b>Dream Career</b>
+                    </div><b></b></p>
                 <div class="theme-head mt-4">Why become a Finorator Partner?</div>
                 <div class="row">
                     <div class="col-lg-4 col-xl-4">
@@ -240,5 +253,63 @@ You’re just one step away from your <b>Dream Career</b></p>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/popper.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script>
+	var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+    };
+</script>
     </body>
 </html>
