--- a/index.html
+++ b/index.html
@@ -28,28 +28,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Product List<span class="caret"></span></a> 
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li>
-                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">WEALTH PLANNING</a>
-                                </li>
-                                <li>
-                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">INVESTMENT PLANNING</a>
-                                </li>
-                                <li>
-                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">INTERMEDIARY SERVICES</a>
-                                </li>
-                                <li>
-                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">TAX PLANNING & CONSULTANCY</a>
-                                </li>
-                                <li>
-                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">ACCOUNTING</a>
-                                </li>
-                                <li>
-                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">DIGITAL SIGNATURE</a>
-                                </li>
-                            </ul>
-                            <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
+                            <a class="dropdown-item test">Product List<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
                                     <a tabindex="-1" href="#segment" class="dropdown-item">Shares & Stocks</a>
@@ -68,6 +47,27 @@
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="#segment" class="dropdown-item">Real Estate</a>
+                                </li>
+                            </ul>                             
+                            <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
+                            <ul class="dropdown-menu dropdown-submenu" style="top: 36px;">
+                                <li>
+                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">WEALTH PLANNING</a>
+                                </li>
+                                <li>
+                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">INVESTMENT PLANNING</a>
+                                </li>
+                                <li>
+                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">INTERMEDIARY SERVICES</a>
+                                </li>
+                                <li>
+                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">TAX PLANNING & CONSULTANCY</a>
+                                </li>
+                                <li>
+                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">ACCOUNTING</a>
+                                </li>
+                                <li>
+                                    <a tabindex="-1" href="contact-us.html" class="dropdown-item">DIGITAL SIGNATURE</a>
                                 </li>
                             </ul>
                         </div>
@@ -188,7 +188,12 @@ under <span class="text-black-50">One Roof</span></h1>
         </div>
         <div class="section-body features">
             <div class="container">
-                <div class="theme-head text-center">Why choose Finorator</div>
+                <div class="theme-head text-center">
+                    Why choose Finorator
+
+                    <div class="description">Choosing Finorator helps you manage all personal financial decisions and operations seamlessly in one place
+</div>                     
+                </div>
                 <div class="row mb-5">
                     <div class="col-xl-4 col-lg-4 col-sm-6">
                         <div class="feature-bigcard">
@@ -231,7 +236,7 @@ under <span class="text-black-50">One Roof</span></h1>
                     <div class="col-xl-3 col-lg-3 col-sm-6">
                         <div class="text-center feature-smallcard">
                             <img src="assets/side-feature3.svg">
-                            <div class="title">Effortless
+                            <div class="title">One Time
                                 <br> Universal KYC
                             </div>
                             <div class="description">Tired of registering everywhere for KYC? With Finorator, you need to register digitally only once for all your financial uses and applications.
