--- a/index.html
+++ b/index.html
@@ -322,6 +322,29 @@ under <span class="text-black-50">One Roof</span></h1>
                 </div>
             </div>
         </div>
+        <div class="section-body">
+            <div class="container">
+                <div class="theme-head">Who can use Finorator?</div>
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 col-xl-6">
+                        <ul class="list-group eligible-list">
+                            <li class="list-group-item">
+                                <img src="assets/eligible-1.svg">
+                                <p>A Resident of India</p>
+                            </li>
+                            <li class="list-group-item">
+                                <img src="assets/eligible-2.svg">
+                                <p>Anyone above 18 years of age&nbsp;</p>
+                            </li>
+                            <li class="list-group-item">
+                                <img src="assets/eligible-3.svg">
+                                <p>Holding any designation or a profession</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="section-body blogs">
             <div class="container">
                 <div class="theme-head">Learn & Explore</div>
