--- a/partner.html
+++ b/partner.html
@@ -170,7 +170,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     </div>
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/partner-feature-6.svg">
+                            <img src="assets/partner-feature-7.svg">
                             <div class="title">
                                 Better Payout than Market
 </div>
@@ -218,6 +218,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                                 <label for="formGroupExampleInput2">Segment</label>
                                 <select name="cars" id="cars" form="carform">
                                     <option value="volvo">Select segment</option>
+                                    <option value="saab">All</option>
                                     <option value="saab">Mutual Funds</option>
                                     <option value="opel">Insurance</option>
                                     <option value="audi">Loans</option>
